--- a/style.css
+++ b/style.css
@@ -83,4 +83,17 @@ header{
   scale: 0.95;
 }
 
+/*Dropdown menu */
+
 /* Responsive Design */
+
+@media (max-width: 992px){
+  .navbar .links,
+  .navbar .action_btn{
+    display: none;
+  }
+
+  .navbar .toggle_btn{
+    display: block;
+  }
+}
